manifest/commentary-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commentary-deployment
  labels:
    app: commentary
spec:
  replicas: 3
  selector:
    matchLabels:
      app: commentary
  template:
    metadata:
      labels:
        app: commentary
    spec:
      containers:
      - name: commentary-pod
        image: adamjurcz/commentary-service:latest
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: commentary-service
spec:
  selector:
    app: commentary
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
