manifest/event-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-deployment
  labels:
    app: event
spec:
  replicas: 3
  selector:
    matchLabels:
      app: event
  template:
    metadata:
      labels:
        app: event
    spec:
      containers:
      - name: event-service
        image: adamjurcz/event-service:latest
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
spec:
  selector:
    app: event
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
