manifest/post-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-deployment
  labels:
    app: post
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post
  template:
    metadata:
      labels:
        app: post
    spec:
      containers:
      - name: post-pod
        image: adamjurcz/post-service:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: post-service
spec:
  selector:
    app: post
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
