manifest/query-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
  labels:
    app: query
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query-pod
        image: adamjurcz/query-service:latest
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  selector:
    app: query
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
