manifest/verify-comment-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: verify-comment-deployment
  labels:
    app: verify-comment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: verify-comment
  template:
    metadata:
      labels:
        app: verify-comment
    spec:
      containers:
      - name: verify-comment-pod
        image: adamjurcz/verify-comment-service:latest
        ports:
        - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: verify-comment-service
spec:
  selector:
    app: verify-comment
  ports:
    - protocol: TCP
      port: 8085
