manifest/microservices-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
spec:
  rules:
  - host: adamjurczblog.com
    http:
      paths:
      - path: /api/v1/commentary
        pathType: Prefix
        backend:
          service:
            name: commentary-service
            port:
              number: 8082
      - path: /api/v1/posts
        pathType: Prefix
        backend:
          service:
            name: post-service
            port:
              number: 8081
      - path: /api/v1/queries
        pathType: Prefix
        backend:
          service:
            name: query-service
            port:
              number: 8084
